Tests/Runtime2/Error/InHandler/.build/throwwithbadhandler.pr
[
  {
    "name": "ThrowWithBadHandler",
    "description": "Build goal ThrowWithBadHandler: call ThrowOriginal; on error call BadHandler.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "call ThrowOriginal, on error call BadHandler",
        "lineNumber": 3,
        "indent": 0,
        "comment": "calls a goal that throws, handler also throws",
        "actions": [
          {
            "module": "goal",
            "action": "call",
            "parameters": [
              {
                "name": "GoalName",
                "value": "ThrowOriginal",
                "type": "goal.call"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": {
          "goal": {
            "name": "BadHandler",
            "description": null,
            "parallel": false,
            "parameters": null,
            "prPath": null
          },
          "retryCount": null,
          "retryOverMs": null,
          "order": null,
          "ignoreError": false,
          "message": null,
          "statusCode": null,
          "key": null
        },
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/ThrowWithBadHandler.goal",
    "prPath": "/.build/throwwithbadhandler.pr",
    "hash": "010dce8d9abce373be533dc95dd11a5dabefdaf8f05787372c28dd8580f1cee7",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]